Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-12265] Scoped import doesn't work in mixed source module #54693

Closed
hamishknight opened this issue Feb 24, 2020 · 1 comment
Closed

[SR-12265] Scoped import doesn't work in mixed source module #54693

hamishknight opened this issue Feb 24, 2020 · 1 comment
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself type checker Area → compiler: Semantic analysis

Comments

@hamishknight
Copy link
Collaborator

Previous ID SR-12265
Radar None
Original Reporter @hamishknight
Type Bug
Status Closed
Resolution Done
Environment

Swift version 5.2-dev (LLVM ddeeee2, Swift a32031f55d)
Target: x86_64-apple-darwin19.0.0

Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, TypeChecker
Assignee @hamishknight
Priority Medium

md5: eb22cd732c99d5e82454b287801dc2b0

Issue Description:

Given a Clang module Mod and SubMod, where SubMod is a submodule of Mod, and has the following declaration:

extern void fromSubmodule();

When compiling a same-named Swift module Mod that has a scoped import for Mod.SubMod.fromSubmodule, for example:

import func Mixed.Submodule.fromSubmodule

We incorrectly emit an error:

error: function 'fromSubmodule' does not exist in module 'Mod'
import func Mod.SubMod.fromSubmodule
            ^

However we should really allow this to compile.

@hamishknight
Copy link
Collaborator Author

Fixed by #30038

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself type checker Area → compiler: Semantic analysis
Projects
None yet
Development

No branches or pull requests

1 participant